@@ -3,6 +3,8 @@ The "r99999" numbers are Subversion revision numbers.
 
 Changes for current svn
 =======================
+ o 18193 Added fix for Java client side forced asynchronous mode
+
  o 18190 added lazyConnect configuration parameter to ClusterManager.
 
  o 18187-18189 Implmented asynchronous sending of xmlBlaster.get() calls
